# PaperCorpus2Skill

./: .gitignore  LICENSE  README.md  papercorpus2skill.yaml  papercorpus2skill.yaml.example  pyproject.toml
docs/superpowers/plans/: 2026-06-19-agent-mvp.md
docs/superpowers/specs/: 2026-06-19-agent-mvp-design.md
examples/sample-corpus/nlp/: paper-01.md  paper-02.md
examples/sample-corpus/rppg/: paper-01.md  paper-02.md
examples/sample-corpus/webdev/: paper-01.md  paper-02.md  paper-03.md  paper-04.md  paper-05.md  paper-06.md
src/papercorpus2skill/: __init__.py  agent.py  analyzers.py  batch.py  batch_analyzer.py  config.py  corpus.py  env.py  llm.py  markdown_converter.py  parsers.py  sectioning.py  skill_state.py  skills.py
src/papercorpus2skill/cli/: main.py
tests/: test_agent.py  test_analyzers.py  test_batch.py  test_batch_analyzer.py  test_cli.py  test_config.py  test_corpus.py  test_env.py  test_markdown_converter.py  test_parsers.py  test_resume_and_report.py  test_sectioning.py  test_skill_state.py
