[project]
name = "papercorpus2skill"
version = "0.1.0"
description = "Turn PDF and Markdown paper corpora into portable AI skill packs."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.optional-dependencies]
pdf = ["PyMuPDF>=1.24"]
test = ["pytest>=8.0"]

[project.scripts]
papercorpus2skill = "papercorpus2skill.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/papercorpus2skill"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
